--- a/DoseRateEditor/packages.config
+++ b/DoseRateEditor/packages.config
@@ -7,8 +7,9 @@
   <package id="MahApps.Metro.IconPacks.FontAwesome" version="4.8.0" targetFramework="net452" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net452" />
-  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net452" />
-  <package id="OxyPlot.Wpf" version="2.0.0" targetFramework="net452" />
+  <package id="OxyPlot.Core" version="2.1.0" targetFramework="net452" />
+  <package id="OxyPlot.Wpf" version="2.1.0" targetFramework="net452" />
+  <package id="OxyPlot.Wpf.Shared" version="2.1.0" targetFramework="net452" />
   <package id="Prism.Core" version="8.0.0.1909" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
 </packages>
