--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,6 +1,12 @@
 name: Build ESAPI Script - v15.6
 
-on: [push]
+on [push]:
+  workflow_dispatch:
+    inputs:
+      dateInput:
+        description: 'Exparation Date'
+        required: true
+        default: '7/11/2022'
 
 jobs:
   build:
