--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -50,7 +50,7 @@ jobs:
       run: nuget source add -Name github `
         -Source "https://nuget.pkg.github.com/Varian-Innovation-Center/index.json" `
         -UserName craman96 `
-        -Password ${{ secrets.GITHUB_TOKEN }} `
+        -Password ${{ secrets.ESAPI_READ_TOKEN }} `
         -StorePasswordInClearText
 
     - name: Download nuget package
