--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -62,12 +62,12 @@ jobs:
       run: .\.github\workflows\Update-EsapiHintPaths.ps1 -CsprojFilePath ./DoseRateEditor -CsprojFileName DoseRateEditor.csproj 
 
     - name: Build Solution
-      run: msbuild.exe DoseRateEditor.sln /nologo /nr:false /p:DeleteExistingFiles=True /p:platform="x64" /p:configuration="Release"
+      run: msbuild.exe DoseRateEditor.sln /nologo /nr:false /p:DeleteExistingFiles=True /p:Configuration=Debug /p:Platform="x64"
         
     - name: Zip
       run: |
         Compress-Archive `
-          -Path "${{ github.workspace }}/bin/x64/Release/*" `
+          -Path "${{ github.workspace }}/bin/x64/Debug/*" `
           -DestinationPath "${{ github.workspace }}/${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV156.zip"
     
     - name: Create Release
