--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -67,7 +67,7 @@ jobs:
     - name: Zip
       run: |
         Compress-Archive `
-          -Path "${{ github.workspace }}/bin/Debug/*" `
+          -Path "${{ github.workspace }}DoseRateEditor\bin\Debug\*" `
           -DestinationPath "${{ github.workspace }}/${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV156.zip"
     
     - name: Create Release
