--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: windows-2019
     env:
       GITHUB_WORKSPACE_PACKAGES_PATH: packages\ESAPI.15.6.0\lib\net45\
-      PROJECT_NAME: buildtest
+      PROJECT_NAME: Doserate Editor
       MAJOR_VERSION: 2
       MINOR_VERSION: 5
       PATCH_VERSION: 6
