--- a/.github/workflows/pipeline_15.6.yaml
+++ b/.github/workflows/pipeline_15.6.yaml
@@ -68,7 +68,7 @@ jobs:
         -CsprojFileName ${{env.PROJECT_NAME}}.csproj
     
     - name: Build Solution
-      run: msbuild.exe .\${{env.PROJECT_NAME}}.sln /nologo /nr:false /p:DeleteExistingFiles=True /p:platform="x64" /p:configuration="Debug"
+      run: msbuild.exe .\${{env.PROJECT_NAME}}.sln /nologo /nr:false /p:DeleteExistingFiles=True /p:Configuration=Debug /p:Platform="Any CPU"
         
     - name: Zip
       run: |
