--- a/.github/workflows/pipeline_17.0.yaml
+++ b/.github/workflows/pipeline_17.0.yaml
@@ -6,17 +6,17 @@ on:
       dateInput:
         description: 'Expiration Date'
         required: true
-        default: '7/11/2022'
+        default: '1/1/2024'
 
 jobs:
   build:
     runs-on: windows-2019
     env:
       GITHUB_WORKSPACE_PACKAGES_PATH: packages\ESAPI.17.0.0\lib\net48\
-      PROJECT_NAME: Doserate Editor
-      MAJOR_VERSION: 2
-      MINOR_VERSION: 5
-      PATCH_VERSION: 6
+      PROJECT_NAME: DoseRateEditor
+      MAJOR_VERSION: 1
+      MINOR_VERSION: 0
+      PATCH_VERSION: 0
       BUILD_NUMBER: ${{ github.run_number }}
 
     steps:
@@ -32,62 +32,67 @@ jobs:
       run: cd $GITHUB_WORKSPACE
 
     - name: Update Target Framework Version to 4.8
-      uses: rshillington/file-content-replacer@master
+      uses: Nambers/ReplaceStringInFile@v1.1
       with:
-        files: ${{ github.workspace }}/DoseRateEditor/DoseRateEditor.csproj
-        from: "TargetFrameworkVersion>v[\\d\\.]+<"
-        to: 'TargetFrameworkVersion>v4.8<'
+        path: .\${{ env.PROJECT_NAME}}\${{ env.PROJECT_NAME}}.csproj
+        oldString: "TargetFrameworkVersion>v[\\d\\.]+<"
+        newString: 'TargetFrameworkVersion>v4.8<'
 
     - name: Update AssemblyInfo.cs
       id: update_assembly_info
       run: |
         .\.github\workflows\Update-AssemblyInfo.ps1 `
-          -AssemblyInfoFilePath ${{ github.workspace }}/DoseRateEditor/Properties/AssemblyInfo.cs `
+          -AssemblyInfoFilePath .\${{ env.PROJECT_NAME}}\Properties\AssemblyInfo.cs `
           -ExpirationDate "${{ github.event.inputs.dateInput }}" `
           -MajorVersion ${{ env.MAJOR_VERSION }} `
           -MinorVersion ${{ env.MINOR_VERSION }} `
           -PatchVersion ${{ env.PATCH_VERSION }} `
           -BuildNumber ${{ env.BUILD_NUMBER }}
+
     - name: Setup NuGet.exe for use with actions
       uses: NuGet/setup-nuget@v1.0.6
       with:
         nuget-version: latest
 
-
+    - name: Download nuget packages
+      run: nuget install .\${{ env.PROJECT_NAME}}\packages.config -OutputDirectory ${{ env.PROJECT_NAME}}\packages
 
     - name: Add VIC GitHub NuGet repository
-      run: nuget source add -Name github `
+      run: nuget source add
+        -Name github `
         -Source "https://nuget.pkg.github.com/Varian-Innovation-Center/index.json" `
         -UserName craman96 `
-        -Password ${{ secrets.ESAPI_READ_TOKEN }} `
+        -Password ${{ secrets.GITHUB_TOKEN }} `
         -StorePasswordInClearText
 
-    - name: Download nuget package
-      run: nuget install ESAPI -Version 17.0.0 -OutputDirectory packages
+    - name: Download ESAPI package
+      run: nuget install ESAPI -Version 17.0.0 -OutputDirectory ${{ env.PROJECT_NAME}}/packages
 
     - name: Update hint paths in the csproj file
-      run: .\.github\workflows\Update-EsapiHintPaths.ps1 -CsprojFilePath ./DoseRateEditor -CsprojFileName DoseRateEditor.csproj 
+      run: |
+        .\.github\workflows\Update-EsapiHintPaths.ps1 `
+        -CsprojFilePath .\${{ env.PROJECT_NAME}}\ `
+        -CsprojFileName ${{ env.PROJECT_NAME}}.csproj
 
     - name: Build Solution
-      run: msbuild.exe DoseRateEditor.sln /nologo /nr:false /p:DeleteExistingFiles=True /p:Configuration=Debug /p:Platform="Any CPU"
-        
+      run: msbuild.exe .\${{ env.PROJECT_NAME}}\${{ env.PROJECT_NAME}}.csproj /nologo /nr:false /p:DeleteExistingFiles=True /p:platform="x64" /p:configuration="Release"
+
     - name: Zip
       run: |
         Compress-Archive `
-          -Path "${{ github.workspace }}\DoseRateEditor\bin\Debug\*" `
-          -DestinationPath "${{ github.workspace }}/${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV170.zip"
+          -Path ".\${{ env.PROJECT_NAME}}\bin\Debug\*" `
+          -DestinationPath "${{ github.workspace }}/${{env.PROJECT_NAME}}${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV170.zip"
     
     - name: Create Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v0.1.13
       with:
-        name: ${{ steps.update_assembly_info.outputs.RELEASE_NAME }}-EclipseV17.0
-        tag_name: ${{ steps.update_assembly_info.outputs.RELEASE_NAME }}-EclipseV17.0
+        name: ${{env.PROJECT_NAME}}-${{ steps.update_assembly_info.outputs.RELEASE_NAME }}-EclipseV17.0
+        tag_name: ${{env.PROJECT_NAME}}-${{ steps.update_assembly_info.outputs.RELEASE_NAME }}-EclipseV17.0
         token: ${{ secrets.GITHUB_TOKEN }}
         draft: false
         prerelease: false
         body: |
-          # ${{ env.PROJECT_NAME }} - V${{ steps.update_assembly_info.outputs.RELEASE_VERSION }}
           This is an official release of the **`${{ env.PROJECT_NAME }}`** project.
           Supported Eclipse version: `v17.0`.
           The generated dll is valid until `${{ github.event.inputs.dateInput }}`.
-        files: ${{ github.workspace }}/${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV170.zip
+        files: ${{ github.workspace }}/${{env.PROJECT_NAME}}${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV170.zip
