Added startup details

--- a/DoseRateEditor/App.config
+++ b/DoseRateEditor/App.config
@@ -6,5 +6,6 @@
 	<appSettings>
 		<add key="Validated" value="false"/>
 		<add key="Debug" value="true"/>
+		<add key="EULAAgreed" value="false"/>
 	</appSettings>
 </configuration>
