--- a/DoseRateEditor/App.config
+++ b/DoseRateEditor/App.config
@@ -5,7 +5,7 @@
     </startup>
 	<appSettings>
 		<add key="Validated" value="false"/>
-		<add key="Debug" value="true"/>
+		<add key="Debug" value="false"/>
 		<add key="EULAAgreed" value="false"/>
 	</appSettings>
 </configuration>
