--- a/DoseRateEditor/DoseRateEditor.csproj
+++ b/DoseRateEditor/DoseRateEditor.csproj
@@ -127,7 +127,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Events\HyperlinkEvent.cs" />
-    <Compile Include="Launcher\DREditExplicitPathLauncher.cs" />
+    <Compile Include="Launcher\DREditExplicitPathLauncher.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Models\CosmoCoro.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
@@ -201,6 +203,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
+    <EmbeddedResource Include="license.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\Transversal_FFS.PNG" />
     <EmbeddedResource Include="Resources\Sagittal_HFDLcrop.PNG" />
     <EmbeddedResource Include="Resources\Frontal_crop.png" />
