--- a/.github/workflows/pipeline_17.0.yaml
+++ b/.github/workflows/pipeline_17.0.yaml
@@ -79,7 +79,7 @@ jobs:
       run: |
         Compress-Archive `
           -Path ".\${{ env.PROJECT_NAME}}\bin\Debug\*" `
-          -DestinationPath "${{ github.workspace }}/${{env.PROJECT_NAME}}${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV170.zip"
+          -DestinationPath "${{ github.workspace }}/${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV170.zip"
     
     - name: Create Release
       uses: softprops/action-gh-release@v0.1.13
@@ -93,4 +93,4 @@ jobs:
           This is an official release of the **`${{ env.PROJECT_NAME }}`** project.
           Supported Eclipse version: `v17.0`.
           The generated dll is valid until `${{ github.event.inputs.dateInput }}`.
-        files: ${{ github.workspace }}/${{env.PROJECT_NAME}}${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV170.zip
+        files: ${{ github.workspace }}/${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV170.zip
