--- a/.github/workflows/pipeline_18.0.yaml
+++ b/.github/workflows/pipeline_18.0.yaml
@@ -79,13 +79,13 @@ jobs:
       run: |
         Compress-Archive `
           -Path ".\${{ env.PROJECT_NAME}}\bin\Debug\*" `
-          -DestinationPath "${{ github.workspace }}/${{env.PROJECT_NAME}}${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV180.zip"
+          -DestinationPath "${{ github.workspace }}/${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV180.zip"
     
     - name: Create Release
       uses: softprops/action-gh-release@v0.1.13
       with:
-        name: ${{env.PROJECT_NAME}}-${{ steps.update_assembly_info.outputs.RELEASE_NAME }}-EclipseV18.0
-        tag_name: ${{env.PROJECT_NAME}}-${{ steps.update_assembly_info.outputs.RELEASE_NAME }}-EclipseV18.0
+        name: ${{ steps.update_assembly_info.outputs.RELEASE_NAME }}-EclipseV18.0
+        tag_name: ${{ steps.update_assembly_info.outputs.RELEASE_NAME }}-EclipseV18.0
         token: ${{ secrets.GITHUB_TOKEN }}
         draft: false
         prerelease: false
@@ -93,4 +93,4 @@ jobs:
           This is an official release of the **`${{ env.PROJECT_NAME }}`** project.
           Supported Eclipse version: `v18.0`.
           The generated dll is valid until `${{ github.event.inputs.dateInput }}`.
-        files: ${{ github.workspace }}/${{env.PROJECT_NAME}}${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV180.zip
+        files: ${{ github.workspace }}/{{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV180.zip
