--- a/.github/workflows/pipeline_18.0.yaml
+++ b/.github/workflows/pipeline_18.0.yaml
@@ -93,4 +93,4 @@ jobs:
           This is an official release of the **`${{ env.PROJECT_NAME }}`** project.
           Supported Eclipse version: `v18.0`.
           The generated dll is valid until `${{ github.event.inputs.dateInput }}`.
-        files: ${{ github.workspace }}/{{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV180.zip
+        files: ${{ github.workspace }}/${{ steps.update_assembly_info.outputs.RELEASE_FILE_NAME }}-EclipseV180.zip
