--- a/VirtualCones/App.config
+++ b/VirtualCones/App.config
@@ -3,6 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
+    <appSettings>
+        <add key="Validated" value="false"/>
+        <add key="Debug" value="false"/>
+        <add key="EULAAgreed" value="false"/>
+    </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
