--- a/VirtualCones/packages.config
+++ b/VirtualCones/packages.config
@@ -8,6 +8,7 @@
   <package id="OxyPlot.Core" version="2.2.0" targetFramework="net472" />
   <package id="OxyPlot.Wpf" version="2.2.0" targetFramework="net472" />
   <package id="OxyPlot.Wpf.Shared" version="2.2.0" targetFramework="net472" />
+  <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="9.0.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
