--- a/VirtualCones/App.config
+++ b/VirtualCones/App.config
@@ -6,6 +6,7 @@
     <appSettings>
         <add key="Validated" value="false"/>
         <add key="Debug" value="false"/>
+		<add key="Validation" value="false"/>
         <add key="EULAAgreed" value="false"/>
     </appSettings>
   <runtime>
