revised interface - matt and japan

--- a/VirtualCones/App.config
+++ b/VirtualCones/App.config
@@ -7,6 +7,7 @@
         <add key="Validated" value="false" />
         <add key="Debug" value="false" />
 		<add key="Validation" value="false" />
+		<add key="MachineDeliveryValidationPerformed" value="false"/>
         <add key="EULAAgreed" value="false" />
     </appSettings>
   <runtime>
