revised interface - changed config, added request for machine validation, etc.  - Matt and Japan

--- a/VirtualCones/VirtualCones_MCB.csproj
+++ b/VirtualCones/VirtualCones_MCB.csproj
@@ -197,6 +197,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="BeamTemplateCollections.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="lib\EulaVerification.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
