--- a/VirtualCones/App.config
+++ b/VirtualCones/App.config
@@ -4,10 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
     <appSettings>
-        <add key="Validated" value="false" />
+        <add key="softwareValidated" value="true" />
         <add key="Debug" value="false" />
-		<add key="Validation" value="false" />
-		<add key="MachineDeliveryValidationPerformed" value="false"/>
+		<add key="machineDeliveryValidationPerformed" value="true"/>
         <add key="EULAAgreed" value="false" />
     </appSettings>
   <runtime>
